<resources>
    <string name="app_name">新生专题</string>
    <string name="special_2017_homepage_name">2017迎新网</string>
    <string name="special_2017_elegant_name">重邮风采</string>
    <string name="special_2017_elegant_stu_org">学生组织</string>
    <string name="special_2017_elegant_ori_cqupt">原创重邮</string>
    <string name="special_2017_elegant_bea_cqupt">美在重邮</string>
    <string name="special_2017_elegant_exc_tea">优秀教师</string>
    <string name="special_2017_elegant_exc_stu">优秀学子</string>
    <string name="special_2017_stu_org_name1">团委部门</string>
    <string name="special_2017_stu_org_name2">红岩</string>
    <string name="special_2017_stu_org_name3">校学生会</string>
    <string name="special_2017_stu_org_name4">科联</string>
    <string name="special_2017_stu_org_name5">社联</string>
    <string name="special_2017_stu_org_name6">校青协</string>
    <string name="special_2017_stu_org_name7">大艺团</string>
    <string name="special_2017_stu_org_intro1">团委办公室</string>
    <string name="special_2017_stu_org_intro2">\t\t负责协调和承办团委的日常事务；负责团委大型会议的会务工作；团委相关工作的上传与下达；负责奖状、文件的保管工作；协助管理团委资产。</string>
    <string name="special_2017_stu_org_intro3">团委组织部</string>
    <string name="special_2017_stu_org_intro4">\t\t负责团的基层组织建设工作；开展推优入党工作；负责开展青年马克思主义者培养工程； 指导主题团日活动的开展；开展五
四评优表彰工作。</string>
    <string name="special_2017_stu_org_intro5">团委宣传部</string>
    <string name="special_2017_stu_org_intro6">\t\t负责团属刊物的制作；负责团委官方微博、微信等新媒体阵地的建设；负责myouth平台的建设管理；负责校内各项活动的采
访、拍摄及相关专题视频的制作。</string>
    <string name="special_2017_stu_org_intro1_1">重庆邮电大学红岩网校工作站是一个校园互联网开发团队，自2000年创立以来，已有17个年头了。它是一群志趣相投的在校大学生共同创建的，在校团委老师的指导下，学生自我管理，多年来走出了一大批优秀的IT人才。红岩网校工作站包括五个部门：产品策划及运营部，视觉设计部，Web研发部, 移动开发部和运维安全部。各个部门相互协作，共同推出了重邮小帮手微信公众号、掌上重邮、BT down铺、校园二手拾货网等一系列优秀的校园互联网产品，满足了广大师生的需求，获得一致好评。</string>
    <string name="special_2017_stu_org_intro1_2">产品策划及运营部</string>
    <string name="special_2017_stu_org_intro1_3">Ta以产品、宣传 、组织、赞助为核心方向，是挖掘用户需求，推广网站文化的运营师；Ta负责产品策划，原型设计，是创意的集结点，是项目的瞭望塔，也是网校各部门沟通的桥梁，是一名产品经理，；Ta负责网站线上线下活动的推广，收集并分析用户意见，提出产品功能升级方案，在网校，他们负责网站内容的发布和栏目的更新、网站专题及线上线下活动的策划和制作，利用新媒体平台宣传网校的产品和活动，负责与其他部门组织联系，进行网上的合作共建。我们需要耐心、细心与恒心，以及对产品的热情与责任心，需要学习Office、Ps、Ae、Axure等软件的操作，需要一个产品人的沟通能力和认真态度。</string>
    <string name="special_2017_stu_org_intro1_4">视觉设计部</string>
    <string name="special_2017_stu_org_intro1_5">Ta是设计产品图形用户界面，跟踪产品视觉及体验效果的设计师。Ta负责对网站进行整体创意和美术设计，移动端和PC端用户的界面设计；网页宣传海报设计；网站产品的动画及动效设计 ；对设计成果进行定期评估和研究，进行视觉元素的优化设计。部门的发展方向是视觉设计师和UI设计师。</string>
    <string name="special_2017_stu_org_intro1_6">Web研发部</string>
    <string name="special_2017_stu_org_intro1_7">Ta分为前端和后台方向。前端主要负责前端开发和页面制作，根据设计图用HTML和CSS完成页面制作；对网站前端性能做相应的优化。而后端是负责数据库设计和服务端逻辑开发；利用LNAMP搭建功能全面、操作方便的后台管理系统。在Web研发部学长学姐们的带领下，能让你感受到 HTML、CSS、JavaScript、PHP的深深的”善意”。在这里大家将会写代码，会上课，那么就会有作业。Web部里的骚年们上可搭建服务器，下可横扫pc移动h5。</string>
    <string name="special_2017_stu_org_intro1_8">移动开发部</string>
    <string name="special_2017_stu_org_intro1_9">Ta主要负责移动端产品的开发，以 Java&amp;Kotlin，OC&amp;Swift，C#为主要开发语言，涵盖Android，iOS，Windows 三个平台。在这里你可以学到App的开发制作。移动互联网就是我们的日常；从被大神虐哭到自己成为大神。在移动开发部你将对App开发感兴趣，对App制作有狂热的欲望。</string>
    <string name="special_2017_stu_org_intro1_10">运维安全部</string>
    <string name="special_2017_stu_org_intro1_11">Ta既是红岩网校运维安全部(内部称之为 网校 SRE ( Site Reliability Engineering ))，也是重庆邮电大学 Linux 协会( CQUPT Linux User Group )。Ta 主要负责维护网校的服务器稳定和安全，同时也负责新项目的部署、环境安全配置和性能优化，还负责了校内的很多公益项目，例如 重庆邮电大学开源镜像站、重庆邮电大学 OpenStack 云计算资源池、重庆邮电大学 MineCraft/CounterStrike 服务器等等。在这里你可以学习到非常多的酷炫的 Linux 知识和信息安全知识，我们使用 Python 和 Go 语言来开发好玩有趣的项目，在这里你可以利用丰富的服务器资源来搭建自己想做的任何项目。在运维安全部，你要对技术执着、对高性能孜孜不倦，“如果不能优雅的解决这个问题，那我们就有了两个问题”。|´・ω・)ノ</string>
    <string name="special_2017_stu_org_intro2_1">重庆邮电大学学生科技联合会（SSTU：Student  Science  and  Technology  Union）简称学生科联，是团委指导下，以服务学生创新创业为职责的校级学生组织。学生科联以“创新、高效、团结、求实”为宗旨，以“成功与科技相辉映，科联携你我共腾飞”为口号，以“挑战杯”、“创青春”竞赛为龙头，以“学生科技文化节”、“文峰青年大讲堂”、“创新创业训练营”、“重邮青年说”、“学长演播厅”、“无线电猎狐大赛”等活动为品牌，积极参与学校创新创业教育和实践工作。</string>
    <string name="special_2017_stu_org_intro2_2">主席团</string>
    <string name="special_2017_stu_org_intro2_3">全面负责科联各项工作的开展；制定科联年度工作计划和发展规划；指导、检查、督促各部门开展工作，协调各方面关系，定期向团委汇报科联的工作情况。</string>
    <string name="special_2017_stu_org_intro2_4">综合部</string>
    <string name="special_2017_stu_org_intro2_5">负责学生科联日常事务的管理；组织开展学生科联内部活动；协调各学院学生科协的工作；负责收集和发布校内外科创赛事资讯；负责与兄弟高校及校外商家的联络。</string>
    <string name="special_2017_stu_org_intro2_6">科创竞赛部</string>
    <string name="special_2017_stu_org_intro2_7">负责开展“科普先锋秀”、“无线电猎狐大赛”等活动；组织“挑战杯”大学生课外学术科技作品竞赛、“创青春”全国大学生创业大赛的申报和立项工作。</string>
    <string name="special_2017_stu_org_intro2_8">项目管理部</string>
    <string name="special_2017_stu_org_intro2_9">组织开展学生科联的创新、创业活动。负责协调开展学生科技节系列活动；负责组织“大学生创新创业训练营”以及“创新创业高端论坛”等活动。</string>
    <string name="special_2017_stu_org_intro2_10">科技人文部</string>
    <string name="special_2017_stu_org_intro2_11">组织开展“重邮青年说”、“学长演播厅”等校级品牌活动；负责举办“文峰青年大讲堂”大型高端讲座；指导学生科协系统的创新文化建设工作。</string>
    <string name="special_2017_stu_org_intro2_12">信息部</string>
    <string name="special_2017_stu_org_intro2_13">主要负责Html5网页的开发、UI设计、三创网的宣传推广和科技创新实践活动的策划与开展，为科联的活动和宣传提供技术支持。
</string>
    <string name="special_2017_stu_org_intro2_14">媒体运营部</string>
    <string name="special_2017_stu_org_intro2_15">主要负责海报、活动视频、微电影以及动画的的设计与制作；负责科联公众平台的线上运营和网络宣传推送等；在为科联活动提供创新创意的同时创造多样化创新性活动宣传。</string>
    <string name="special_2017_stu_org_intro3_1">重庆邮电大学学生社团联合会：</string>
    <string name="special_2017_stu_org_intro3_2">社团联合会在校团委的直接指导下，管理社团工作、服务社团发展的学生组织，旗下管辖着涵盖文学学术、实践服务、艺术
文化、爱好兴趣、体育运动等功能丰富、类型兼备的各类学生社团组织。它以充分调动众多社团及其会员的积极性和创造性，
全面开展有深度、有内涵、有品位、有价值、有意义的社团活动，不断丰富校园文化生活，提高当代大学生的学习能力、实
践能力、组织能力和创新能力为目标。 作为青年自组织，学生社团是培养和发展大学生兴趣爱好的广阔平台，是培养学生自
我教育、自我管理、自我服务的有效形式，是构建“一体两翼”学校团建大格局的重要组成部分，是凝聚青年、丰富校园文化
、培育和传承大学精神的重要载体，目前，能否建设好高校的社团已经成为一个高校是否具有活力和文化氛围的重要标志之
一。学生社团遍布全国高校校园的各个角落，扮演着丰富校园文化生活、提升校园文化品位、引领校园文化时尚的重要角色。
社团联合会扮演着对各社团服务和管理的双重角色，对学生社团的发展起着至关重要的作用</string>
    <string name="special_2017_stu_org_intro3_3">主席团</string>
    <string name="special_2017_stu_org_intro3_4">全面主持学生社联各项工作；制定社联工作计划和发展规划；指导、检查、督促各社团开展工作，协调与各学生组织 和社团
之间的关系。</string>
    <string name="special_2017_stu_org_intro3_5">综合部</string>
    <string name="special_2017_stu_org_intro3_6">社联小当家。负责社联内部文书、考勤、活动筹备等工作，策划组织各项内部活动；负责学生社团精品活动物资的审批发放、场地申请；同时负责与兄弟高校社联组织、校内各组织及校外商家的联络。</string>
    <string name="special_2017_stu_org_intro3_7">宣传部</string>
    <string name="special_2017_stu_org_intro3_8">活动先行者。负责社联新媒体运营工作，搭建学生社团宣传平台。负责设计社联活动海报、视频等文化产品，同时审批社团活动海报等宣传制品。</string>
    <string name="special_2017_stu_org_intro3_9">社团服务部</string>
    <string name="special_2017_stu_org_intro3_10">社团小帮手。负责管理社团，是社联连接社团、社团部的桥梁，组织社团的招新、运行、换届以及社团评奖评优等工作，带动社团的发展。</string>
    <string name="special_2017_stu_org_intro3_11">社团活动部</string>
    <string name="special_2017_stu_org_intro3_12">活动执行官。负责审核、指导学生社团开展精品活动，牵头社联各部门举办社团达人秀、社团推广暨展示季等大型活动，增添校园文化色彩。</string>
    <string name="special_2017_stu_org_intro4_1">重庆邮电大学青年志愿者协会</string>
    <string name="special_2017_stu_org_intro4_2">重庆邮电大学青年志愿者协会成立于2014年6月，由校团委指导，秉承“互相帮助、助人自助、无私奉献、不求回报”的志愿者精神，有效的组织全校志愿者参与校内外志愿服务，同时负责学校社会实践工作和志愿服务活动的协调。组织开展全校“三下乡”社会实践活动、“12.5国际志愿者日”志愿周系列活动、“3•5学雷锋月”系列活动、“重庆邮电大学优秀志愿项目答辩”、“校内志愿服务时长管理”、“市民学校”志愿活动等相关工作。
重庆邮电大学青年志愿者协会的组织结构为：</string>
    <string name="special_2017_stu_org_intro4_3">主席团</string>
    <string name="special_2017_stu_org_intro4_4">统筹协调校院两级青年志愿者组织开展工作；拓展对外交流合作平台。</string>
    <string name="special_2017_stu_org_intro4_5">综合管理部</string>
    <string name="special_2017_stu_org_intro4_6">负责青协日常事务统筹和物资管理；负责学校各部门和组织的时长认定与监管；完善与各学院，以及其他学校青协的联系与合作。</string>
    <string name="special_2017_stu_org_intro4_7">青年志愿者服务总队</string>
    <string name="special_2017_stu_org_intro4_8">负责各类志愿服务活动组织及志愿者招募工作；负责优秀志愿项目的评选工作。</string>
    <string name="special_2017_stu_org_intro4_9">实践服务部</string>
    <string name="special_2017_stu_org_intro4_10">负责暑期“三下乡”社会实践活动的组织工作；统筹城乡社区市民学校建设工作。</string>
    <string name="special_2017_stu_org_intro4_11">宣传推广部</string>
    <string name="special_2017_stu_org_intro4_12">负责青年志愿服务活动宣传；负责校内外志愿活动的跟踪纪录；对志愿服务品牌项目进行推广；帮助建设好更完善的志愿服体系。</string>
    <string name="special_2017_stu_org_intro5_1">重庆邮电大学大学生艺术团</string>
    <string name="special_2017_stu_org_intro5_2">重庆邮电大学大学生艺术团是在校团委直接指导管理下的学生艺术团体，肩负组织学校重大文艺活动，代表学校对外联谊，
演出和参加省市文艺大赛的重任。秉承“服务同学，锻炼自我”的宗旨，以丰富校园文化生活，陶冶情操，加强与其他院校艺
术交流与沟通，为校宣传争光，活跃人文气氛等为前提，要求每个成员在艺术实践中以高标准、严要求的态度约束自己。 大
学生艺术团由管乐团、合唱团、舞蹈团、曲艺团组成。主要承担着我校各项大型演出任务，组织编排各项文艺节目，为有文
艺特长的同学搭建良好的交流和展示平台，每个分团都有固定的训练时间和专业指导老师。近年来，大学生艺术团一次次圆
满完成学校交给的各项文艺演出任务，并锻炼和培养了一批批艺术人才。为我校大学生文艺素质的培养，树立了一面旗帜。</string>
    <string name="special_2017_stu_org_intro5_3">主席团</string>
    <string name="special_2017_stu_org_intro5_4">全面主持艺术团各项工作；负责艺术团工作计划的制定和艺术团建设规划；负责艺术团分团干部的培养、选拔工作；负责策划
艺术团各类演出活动。</string>
    <string name="special_2017_stu_org_intro5_5">综合部</string>
    <string name="special_2017_stu_org_intro5_6">负责艺术团日常事务管理；各类文艺活动的后勤保障工作；负责学生活动中心、管乐团排练厅场地管理；协调和联系其他学生
组织及各分团间的工作；负责礼仪志愿者的日常训练及成员的考核工作。</string>
    <string name="special_2017_stu_org_intro5_7">管乐团</string>
    <string name="special_2017_stu_org_intro5_8">负责管乐团的日常训练及管乐团成员的考核、招新工作；组织参加校内外的演出或比赛； 协助指导教师做好管乐团的节目编
排工作。
</string>
    <string name="special_2017_stu_org_intro5_9">舞蹈团</string>
    <string name="special_2017_stu_org_intro5_10">负责舞蹈团的日常训练及舞蹈团成员的考核、招新工作；组织参加校内外的演出或比赛； 协助指导教师做好舞蹈团的节目编
排工作。</string>
    <string name="special_2017_stu_org_intro5_11">民乐团</string>
    <string name="special_2017_stu_org_intro5_12">负责民乐团的日常训练及民乐团成员的考核、招新工作；组织参加校内外的演出或比赛； 协助指导教师做好民乐团的节目编
排工作。</string>
    <string name="special_2017_stu_org_intro5_13">合唱团</string>
    <string name="special_2017_stu_org_intro5_14">负责合唱团的日常训练及合唱团成员的考核、招新工作；组织参加校内外的演出或比赛； 协助指导教师做好合唱团的节目编
排工作。</string>
    <string name="special_2017_stu_org_intro5_15">话剧团</string>
    <string name="special_2017_stu_org_intro5_16">负责话剧团的日常训练及话剧团成员的考核、招新工作；组织参加校内外的演出或比赛；创作并编排新话剧剧本等。</string>
    <string name="special_2017_strategy">邮子攻略</string>
    <string name="special_2017_data">重邮数据</string>
    <string name="special_2017_training">军训特辑</string>
    <string name="special_2017_build_name">建筑名称</string>
    <string name="special_2017_build_description">建筑描述(略去100字)</string>
    <string name="special_2017_load_more">加载更多</string>
    <string name="special_2017_load_finish_no_more">没有更多了</string>
    <string name="special_2017_loading">加载中...</string>
    <string name="special_2017_load_fail">加载失败</string>
    <string name="special_2017_image_detail">查看大图</string>
    <string name="special_2017_video_title">军训有关视频</string>
    <string name="special_2017_student_dormitory_name">1、5、6栋</string>
    <string name="special_2017_student_dormitory_desc">1、5、6栋是我校最豪华的公寓</string>
    <string name="special_2017_school_dinner_name">千喜鹤食堂</string>
    <string name="special_2017_school_dinner_desc">千喜鹤食堂是我校最高大上的食堂</string>
    <string name="special_2017_enter_school_need_know_name">报道需知</string>
    <string name="special_2017_enter_school_need_know_desc">报道时请将身份证、录取通知书、档案袋、团组织档案等交给学校</string>
    <string name="special_2017_qq_group_search_hint">请输入地区或者学院</string>
    <string name="special_2017_search_item_result_hint">我是搜索结果</string>
    <string name="special_2017_search_result_no_more">搜索结果显示完毕，没有更多了</string>
    <string name="special_2017_daily_life_name">农村商业银行</string>
    <string name="special_2017_daily_life_loc">位置：重庆邮电大学某角落,位置描述有点多，巴拉巴拉</string>
    <string name="special_2017_daily_life_desc">简介</string>
    <string name="special_2017_good_food_name">荣昌烧烤</string>
    <string name="special_2017_good_food_loc">位置：问我在哪儿？不知道自己去找？哼</string>
    <string name="special_2017_good_food_desc">简介：据说去吃过这家店的大学生都不会后悔，你知道为什么吗？</string>
    <string name="special_2017_scence_name">南山一棵树</string>
    <string name="special_2017_scence_loc">位置：敢问路在何方？路在脚下，敢问路在何方？我在脚脚~~脚下</string>
    <string name="special_2017_scence_desc">简介：我发誓它不止一棵树，想象一下一对情侣看着夜景，哦豁(单身狗勿喷)</string>
    <string name="special_2017_picker_college">请选择学院</string>
    <string name="special_2017_picker_major">请选择专业</string>
    <string name="special_2017_girl_desc">女生</string>
    <string name="special_2017_boy_desc">男生</string>
    <string name="special_2017_diff">高数</string>
    <string name="special_2017_just">大物</string>
</resources>